--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -24,6 +24,11 @@
     -o-transform: translate(-10px, 10px);
 }
 
+.card-link {
+    text-decoration: none;
+    color: white;
+}
+
 .card-body {
     position: relative;
 }
